src/objects/Ter_Negocio_Complementario__c.object
<CustomObject>
    <description>Este objeto contiene los registros de los negocios complementarios de las estaciones de servicio de Terpel.</description>
    <fields>
        <fullName>F_Acumula__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acumula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_ClubTerpel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Habilitar para el programa de Fidelización &quot;Club Terpel&quot; (Fielo)</inlineHelpText>
        <label>Club Terpel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_Fechaultimatransaccion__c</fullName>
        <label>Fecha última transacción</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>F_IdFidelizacion__c</fullName>
        <externalId>true</externalId>
        <label>Id Fidelizacion</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>F_Reclama__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reclama</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_Redime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Redime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ter_Canon_Arriendo__c</fullName>
        <description>Este campo contiene el valor del cannon de arrendamiento del negocio complementario.</description>
        <label>Canon Arriendo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ter_Ciudad__c</fullName>
        <description>Este campo contiene la ciudad del negocio complementario.</description>
        <label>Ciudad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Codigo_DIAN__c</fullName>
        <description>Código de la DIAN asignado al negocio complementario.</description>
        <label>Código DIAN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Codigo_PDV__c</fullName>
        <description>Este campo contiene el código PDV del negocio complementario.</description>
        <externalId>true</externalId>
        <label>Código PDV</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ter_Codigo_unico_EDS__c</fullName>
        <description>Este campo corresponde al código único de la estación de servicio.</description>
        <formula>Ter_EDS__r.Ter_Codigo_unico__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código único EDS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Departamento__c</fullName>
        <description>Este campo contiene el departamento del negocio complementario.</description>
        <label>Departamento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Direccion__c</fullName>
        <description>Este campo contiene la dirección del negocio complementario.</description>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_EDS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Este campo corresponde a la relación entre la estación de servicio con sus negocios complementarios.</description>
        <label>EDS</label>
        <referenceTo>Ter_Estacion_de_Servicio__c</referenceTo>
        <relationshipLabel>Negocios Complementarios</relationshipLabel>
        <relationshipName>Negocios_Complementarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ter_Fecha_apertura__c</fullName>
        <description>Este campo contiene la fecha de apertura del negocio complementario.</description>
        <label>Fecha apertura</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ter_Fecha_de_vencimiento__c</fullName>
        <description>Este campo contiene la fecha de vencimiento del negocio complementario.</description>
        <label>Fecha de vencimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ter_Formato__c</fullName>
        <description>Este campo contiene el formato del negocio complementario.</description>
        <label>Formato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Latitud__c</fullName>
        <description>Este campo contiene la latitud del negocio complementario.</description>
        <label>Latitud</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Longitud__c</fullName>
        <description>Este campo contiene la longitud del negocio complementario.</description>
        <label>Longitud</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Motos_Carros__c</fullName>
        <description>Este campo contiene información sobre motos y carros relacionado con los negocios complementarios.</description>
        <label>Motos/Carros</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_No_Negocio__c</fullName>
        <description>Este campo contiene el número del negocio complementario.</description>
        <displayFormat>NC-{000000}-{DD}{MM}{YYYY}</displayFormat>
        <label>No. Negocio</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Ter_Regional__c</fullName>
        <description>Este campo contiene la regional del negocio complementario.</description>
        <label>Regional</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Ubicacion__c</fullName>
        <description>Este campo contiene la ubicación del negocio complementario.</description>
        <label>Ubicación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Usuario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Usuario</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Negocios_Complementarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Negocio Complementario</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Negocios Complementarios</pluralLabel>
    <recordTypes>
        <fullName>Ter_Autolavado</fullName>
        <active>true</active>
        <description>Este tipo de registro corresponde a los negocios de tipo autolavado.</description>
        <label>Autolavado</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ter_Centro_de_Lubricacion</fullName>
        <active>true</active>
        <description>Este tipo de registro corresponde a los negocios de tipo centro de lubricación.</description>
        <label>Centro de Lubricación</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ter_Kiosco</fullName>
        <active>true</active>
        <description>Este tipo de registro corresponde a los negocios de tipo kiosco.</description>
        <label>Kiosco</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ter_Local_Comercial</fullName>
        <active>true</active>
        <description>Este tipo de registro corresponde a los negocios de tipo local comercial.</description>
        <label>Local Comercial</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ter_Tienda_de_Conveniencia</fullName>
        <active>true</active>
        <description>Este tipo de registro corresponde a los negocios de tipo tienda de conveniencia.</description>
        <label>Tienda de Conveniencia</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Fielo_NNCC_RestringirActualizacionName</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
 $Profile.Name = &apos;Fielo Backend User&apos;
,ISCHANGED(Name) 
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Tu perfil no permite la edición del campo Nombre</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fielo_TTCC_IdFidelizacionRequerido</fullName>
        <active>true</active>
        <errorConditionFormula>F_ClubTerpel__c &amp;&amp; ISBLANK(F_IdFidelizacion__c)</errorConditionFormula>
        <errorDisplayField>F_IdFidelizacion__c</errorDisplayField>
        <errorMessage>Para poder habilitar el punto de venta en Club Terpel el campo Id Fidelización es Requerido</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TER_NCOM_001_Valida_propietario</fullName>
        <active>true</active>
        <description>Esta regla valida que el campo propietario no se modifique por algunos perfiles.</description>
        <errorConditionFormula>AND( 
ISCHANGED(OwnerId), 
$Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;, 
$Profile.Name &lt;&gt; &quot;Administrador Funcional Plataforma&quot;, 
$Profile.Name &lt;&gt; &quot;Administrador Técnico Plataforma&quot;, 
$Profile.Name &lt;&gt; &quot;Administrador Funcional Comercial&quot;, 
$Profile.Name &lt;&gt; &quot;Cartera&quot; 
)</errorConditionFormula>
        <errorMessage>TER-NCOM-001: Su perfil no permite modificar el propietario.</errorMessage>
    </validationRules>
</CustomObject>